--- a/src/global.scss
+++ b/src/global.scss
@@ -16,7 +16,7 @@
 @import "~@ionic/angular/css/normalize.css";
 @import "~@ionic/angular/css/structure.css";
 @import "~@ionic/angular/css/typography.css";
-@import '~@ionic/angular/css/display.css';
+@import "~@ionic/angular/css/display.css";
 
 /* Optional CSS utils that can be commented out */
 @import "~@ionic/angular/css/padding.css";
@@ -24,3 +24,31 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+// estilos propios
+
+.text-primary {
+  color: var(--ion-color-primary) !important;
+}
+
+.noticia-source-name {
+  font-size: 12px;
+  color: lightgray;
+}
+
+.action-dark .action-sheet-group {
+  background-color: var(--ion-color-dark) m !important;
+  color: white !important;
+}
+
+.action-sark ion-icon {
+  color: white !important;
+}
+
+.ios .action-sheet-icon {
+  display: none !important;
+}
+
+.tab-selectetd {
+  color: var(--ion-color-primary) !important;
+}
